Fix bad scope handling